2008-07-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom/ResolveResult.cs,
	  MonoDevelop.Projects.Dom/DomType.cs,
	  MonoDevelop.Projects.Dom/AssemblyCodeCompletionDatabase.cs,
	  MonoDevelop.Projects.Dom/CompilationUnit.cs,
	  MonoDevelop.Projects.Dom/ICompilationUnit.cs,
	  MonoDevelop.Projects.Dom/Namespace.cs,
	  MonoDevelop.Projects.Dom/ExpressionContext.cs,
	  MonoDevelop.Projects.Dom/DomCecilCompilationUnit.cs,
	  MonoDevelop.Projects.Dom/CodeCompletionDatabase.cs: Worked on dom.

2008-07-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Parser/DefaultCompilationUnit.cs: fixed Bug
	  405930 - FoldingRegions in compilation units are all folded by
	  default

2008-07-03  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom/AssemblyCodeCompletionDatabase.cs,
	  MonoDevelop.Projects.Dom/DomCecilCompilationUnit.cs: Worked on new
	  dom. (resolving in the c# backend now works).

2008-07-03  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom/ResolveResult.cs,
	  MonoDevelop.Projects.Dom/DomType.cs,
	  MonoDevelop.Projects.Dom/AssemblyCodeCompletionDatabase.cs,
	  MonoDevelop.Projects.Dom/DomMethod.cs,
	  MonoDevelop.Projects.Dom/DomCecilType.cs,
	  MonoDevelop.Projects.Dom/DomTypeProxy.cs,
	  MonoDevelop.Projects.Dom/DomReturnType.cs,
	  MonoDevelop.Projects.Dom/CompoundType.cs,
	  MonoDevelop.Projects.Dom/ClassEntry.cs,
	  MonoDevelop.Projects.Dom/DomPersistence.cs,
	  MonoDevelop.Projects.Dom/CodeCompletionDatabase.cs: Worked on new
	  dom.

2008-07-02  Ankit Jain  <jankit@novell.com>

	Fix bug #371569.
	* MonoDevelop.Projects.CodeGeneration/BaseRefactorer.cs